<resources>
    <string name="app_name">EDB</string>
    <string name="my_account_textview">My Accounts</string>
    <string name="transfer_money_btn_txt">Transfer\nMoney</string>
    <string name="withdraw_btn_txt">Virtual\nATM</string>
    <string name="custom_btn_txt_size">15dp</string>
    <string name="pay_credit_btn_txt">Pay\nCredit Card</string>
    <string name="pay_btn_txt">Your\nRequests</string>
    <string name="create_new_acc_txt">Create New Account</string>
    <string name="full_name_txt">Full Name</string>
    <string name="address_txt">Address</string>
    <string name="mobile_number_txt">Mobile Number</string>
    <string name="mobile_num_format">01x xxx xxx xxxx</string>
    <string name="national_id_txt">National ID</string>
    <string name="id_format">3xxxxxxxxxxxxx</string>
    <string name="password_txt">Password</string>
    <string name="re_enter_password_txt">Re-enter Password</string>
    <string name="create_account_txt">Create Account</string>
    <string name="pass_example">ex: Edb@1234</string>
    <string name="email_txt">Email Address</string>
    <string name="email_format">example@gmail.com</string>
    <string name="login_txt">Login</string>
    <string name="login_to_acc_txt">Login to Your Account</string>
    <string name="transfer_txt">Transfer</string>
    <string name="from_acc_txt">From Account</string>
    <string name="to_acc_txt">To Account</string>
    <string name="transfer_money_txt">Transfer Money</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings_txt">Settings</string>
    <string name="currency_egp">EGP</string>
    <string name="account_type_txt">Account Type</string>
    <string name="not_have_an_account_txt">Don\'t have an Account</string>
    <string name="thank_you_for_your_trust">Thank you for your trust</string>
    <string name="trademark_txt">EDB® 2022</string>
    <string name="edb_name">EDB</string>
    <string name="biometric_login_txt">Biometric login</string>
    <string name="edb_wallet_txt">EDB Wallet</string>
    <string name="account_txt">Account</string>
    <string name="deposit_txt">Deposit</string>
    <string name="confirm_txt">Confirm</string>
    <string name="withdraw_txt">Withdraw</string>
    <string name="transaction_completed_successfully">Transaction Completed \nSuccessfully</string>
    <string name="thank_you">Thank You</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="add_account">Add Account</string>
    <string name="change_password">Change Password</string>
    <string name="menu_home_txt">Home</string>
    <string name="menu_requests_txt">Requests</string>
    <string name="menu_transfer_txt">Transfer</string>
    <string name="menu_profile_txt">Profile</string>
    <string name="profile_information">Profile Information</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="quick_links">Quick Links</string>
    <string name="loading_txt">◌</string>
    <string name="processing_transaction">Processing Transaction...</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="error">Error</string>
    <string name="amount">Amount</string>
    <string name="virtual_atm">Virtual ATM</string>
    <string name="back_btn">〈 Back</string>
</resources>