<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout"
    tools:context=".Controller.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginStart="-3dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_edb_logo_small"
            android:contentDescription="@string/edb_name" />

        <TextView
            android:id="@+id/login_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="40dp"
            android:text="@string/login_to_acc_txt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_txt" />

        <EditText
            android:id="@+id/email_txt"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="6dp"
            android:paddingVertical="10dp" />


        <TextView
            android:id="@+id/password_lbl"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:text="@string/password_txt" />

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="6dp"
            android:paddingVertical="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_acc_btn"
                android:layout_width="257dp"
                android:layout_height="61dp"
                android:layout_marginBottom="77dp"
                android:text="@string/login_txt"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/fingerprint_btn"
                android:layout_width="52dp"
                android:layout_height="49dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/round_corners_navy"
                android:backgroundTint="@color/navy"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_fingerprint"
                android:contentDescription="@string/biometric_login_txt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_create_acc_btn"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="0dp"
                android:text="@string/create_account_txt"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thank_you_for_your_trust"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trademark_txt"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>