<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    tools:context=".Controller.ProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:scrollbars="none"
        android:foregroundGravity="top"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top"
            android:layout_gravity="top">

            <TextView
                android:id="@+id/create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/profile_information"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/full_name_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="21dp"
                android:text="@string/full_name_txt" />

            <EditText
                android:id="@+id/full_name_txt"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/icon_person"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/full_name_txt"
                android:inputType="textPersonName"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:id="@+id/address_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/address_txt" />

            <EditText
                android:id="@+id/address_txt"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/icon_location"
                android:drawablePadding="5dp"
                android:hint="@string/address_txt"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:id="@+id/mobile_num_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/mobile_number_txt" />

            <EditText
                android:id="@+id/mobile_num_txt"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/icon_phone"
                android:drawablePadding="5dp"
                android:hint="@string/mobile_num_format"
                android:ems="10"
                android:inputType="phone"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:id="@+id/email_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_txt" />

            <EditText
                android:id="@+id/email_txt"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/email_format"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:id="@+id/id_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/national_id_txt" />

            <EditText
                android:id="@+id/id_txt"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/icon_id"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/id_format"
                android:inputType="number"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <Button
                android:layout_marginTop="40sp"
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="10dp"
                android:text="@string/logout"
                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>