<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.TransferActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline">

        <TextView
            android:id="@+id/transfer_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:text="@string/transfer_money_txt"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/from_acc_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_acc_txt" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <AutoCompleteTextView
                android:id="@+id/sender_acc_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/to_acc_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_acc_txt" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <AutoCompleteTextView
                android:id="@+id/receiver_acc_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/amount_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amount" />

        <EditText
            android:id="@+id/amount_txt"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="5dp"
            android:ems="10"
            android:inputType="number"
            android:paddingHorizontal="6dp"
            android:paddingVertical="10dp" />

        <Button
            android:id="@+id/transfer_btn"
            android:layout_width="305dp"
            android:layout_height="61dp"
            android:layout_marginBottom="77dp"
            android:layout_marginTop="10dp"
            android:text="@string/transfer_txt"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/bottom_nav"
        android:layout_height="65dp"
        android:background="@drawable/top_round_corners"
        android:layout_marginHorizontal="0.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav"
        app:itemIconSize="35dp"
        app:labelVisibilityMode="labeled"/>

</androidx.constraintlayout.widget.ConstraintLayout>